--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
 body {
 	background-color: #000;
 	margin: 0;
+	font-family: sans-serif;
 }
 h1 {
 	 text-align: center;
-	 paddin-top: 20%;
+	 padding-top: 20%;
+	 color: #fff;
+	 text-transform: uppercase
 }
